<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reporte">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reporte"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbReporte"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/Idreporte" />

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resultado"
        android:text="@string/mostrar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limpiar" />
</LinearLayout>